feature/FoodScreen-TransportScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,11 @@
     <string name="date_apr_15_lunch">12:30 - April 15</string>
     <string name="date_mar_31">20:50 - March 31</string>
     <string name="add_expenses">Add Expenses</string>
+    <string name="date_label">Date</string>
+    <string name="category_label">Category</string>
+    <string name="select_category">Select the category</string>
+    <string name="amount_label">Amount</string>
+    <string name="expense_title_label">Expense Title</string>
+    <string name="enter_message">Enter Message</string>
+    <string name="save_button">Save</string>
 </resources>
