--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,17 @@
     <string name="expense_title_label">Expense Title</string>
     <string name="enter_message">Enter Message</string>
     <string name="save_button">Save</string>
+    <string name="notifications_settings">Notification Settings</string>
+    <string name="go_back">Go Back</string>
+    <string name="notifications">Notifications</string>
+    <string name="general_notification">General Notification</string>
+    <string name="sound">Sound</string>
+    <string name="sound_call">Sound Call</string>
+    <string name="vibrate">Vibrate</string>
+    <string name="expense_reminder">Expense Reminder</string>
+    <string name="budget_otifications">Budget Notifications</string>
+    <string name="low_balance_alerts">Low Balance Alerts</string>
+    <string name="settings">Settings</string>
+    <string name="password_settings">Password Settings</string>
+    <string name="delete_account">Delete Account</string>
 </resources>
