--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,18 @@
     <string name="expense_title_label">Expense Title</string>
     <string name="enter_message">Enter Message</string>
     <string name="save_button">Save</string>
+
+    <string name="delete_account_title">Delete Account</string>
+    <string name="delete_account_confirm_title">Are You Sure You Want To Delete\nYour Account?</string>
+    <string name="delete_account_warning">This action will permanently delete all of your data, and you will not be able to recover it. Please keep the following in mind before proceeding:</string>
+    <string name="enter_password_to_confirm">Please Enter Your Password To Confirm\nDeletion Of Your Account.</string>
+    <string name="password_hint">Password</string>
+    <string name="yes_delete_account">Yes, Delete Account</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="item1"> All your expenses, income and associated transactions will be eliminated.</string>
+    <string name="item2"> You will not be able to access your account or any related\ninformation.</string>
+    <string name="item3">  This action cannot be undone.</string>
+
+
 </resources>
