--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     
     <string name="fingerprint_title">Fingerprint</string>
     <string name="add_fingerprint">Add A Fingerprint</string>
+    <string name="delete">Delete</string>
     
     <string name="current_pin_label">Current Pin</string>
     <string name="new_pin_label">New Pin</string>
