Added fingerprinbt deleted screen notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="fingerprint_title">Fingerprint</string>
     <string name="add_fingerprint">Add A Fingerprint</string>
     <string name="delete">Delete</string>
+    <string name="fingerprint_deleted_successfully">The Fingerprint Has\nBeen Successfully\nDeleted.</string>
     
     <string name="current_pin_label">Current Pin</string>
     <string name="new_pin_label">New Pin</string>
